# Kro

./: .gitignore  Kronos.desktop  LICENSE  README.md  RUN.md  install.sh  kronos_smoke_test.py  pyproject.toml  requirements.txt  run-kronos.sh  test_client.py  test_client2.py  test_mpl.py  test_qta.py  test_sim.py  verify.sh
docs/: UI_AUDIT.md
kronos/: __init__.py  main.py
kronos/engine/: __init__.py  kernel_bridge.py  kernel_message_router.py  plot_manager.py  settings_manager.py  workspace_manager.py
kronos/native/: __init__.py
kronos/toolboxes/: __init__.py  registry.py
kronos/toolboxes/Autonomous Driving Toolbox/: __init__.py  opengl_view.py  window.py
kronos/toolboxes/Autonomous Driving Toolbox/core/: __init__.py  adas.py  common.py  dynamics.py  fusion.py  hd_map.py  perception.py  physics_backend.py  planning.py  road.py  sensors.py  simulation.py
kronos/toolboxes/signal_analyzer/: __init__.py  cursor_manager.py  display_manager.py  export_manager.py  filter_designer_panel.py  measurements_widget.py  multiresolution_window.py  panner_widget.py  persistence_panel.py  plot_panel.py  preprocessing_engine.py  ribbon.py  scalogram_panel.py  script_generator.py  settings_dialog.py  signal_analyzer_window.py  signal_loader.py  signal_model.py  signal_store.py  spectrogram_panel.py  spectrum_panel.py  time_panel.py  workspace_bridge.py
kronos/ui/: __init__.py  aeon_window.py  left_panel.py  mainwindow.py  ribbon.py  right_panel.py  simulink_window.py  splash.py  splash_screen.py  statusbar.py  toolbar.py
kronos/ui/bottom/: __init__.py  console_panel.py  figure_panel.py
kronos/ui/center/: __init__.py  editor.py
kronos/ui/center/aeon/: __init__.py  block_item.py  block_param_dialog.py  block_registry.py  canvas.py  simulator.py  wire_item.py
kronos/ui/center/simulink/: __init__.py  block_item.py  block_param_dialog.py  block_registry.py  canvas.py  simulator.py  wire_item.py
kronos/ui/dialogs/: __init__.py  about_dialog.py  bode_wizard.py  frequency_analyzer.py  lqr_designer.py  pid_tuner.py  root_locus_dialog.py  settings_dialog.py  step_response_dialog.py
kronos/ui/theme/: __init__.py  design_tokens.py  fluent_icons.py  mpl_defaults.py  stylesheet.py
kronos_cpp/: CMakeLists.txt  bindings.cpp
kronos_cpp/signal_engine/: bindings.cpp  fft_engine.cpp  fft_engine.h  filter_engine.cpp  filter_engine.h  measurements_engine.cpp  measurements_engine.h  stft_engine.cpp  stft_engine.h  wavelet_engine.cpp  wavelet_engine.h
kronos_cpp/src/: canvas_renderer.cpp  canvas_renderer.h  syntax_highlighter.cpp  syntax_highlighter.h  vehicle_physics.cpp  vehicle_physics.h  vehicle_physics_bindings.cpp  waveform_renderer.cpp  waveform_renderer.h
kronos_ide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
styles/: dark.qss  light.qss
tests/: test_aeon_simulator.py  test_autonomous_driving_toolbox.py  test_signal_analyzer.py  test_smoke.py
