[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronos-ide"
version = "0.1.0"
description = "Open-source Python-native scientific simulation IDE"
authors = [{ name = "Youssef Ben Letaifa" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "PyQt6==6.6.1",
  "PyQt6-Qt6==6.6.1",
  "PyQt6-sip>=13.6.0",
  "PyQt6-QScintilla>=2.14.0",
  "qtawesome>=1.3.1",
  "ipython>=8.20.0",
  "ipykernel>=6.29.0",
  "jupyter_client>=8.6.0",
  "qtconsole>=5.5.1",
  "pyzmq>=25.1.0",
  "traitlets>=5.14.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "control>=0.9.4",
  "slycot>=0.5.4",
  "sympy>=1.12",
  "networkx>=3.2",
  "packaging>=23.0",
  "psutil>=5.9.0",
]

[project.scripts]
kronos = "kronos.main:main"

[tool.setuptools]
packages = [
  "kronos",
  "kronos.ui",
  "kronos.ui.center",
  "kronos.ui.center.aeon",
  "kronos.ui.bottom",
  "kronos.ui.dialogs",
  "kronos.ui.theme",
  "kronos.native",
  "kronos.engine",
]

[tool.setuptools.package-data]
"kronos" = ["assets/icons/fluent/*.svg", "assets/icons/fluent/LICENSE", "assets/icons/fluent/NOTICE"]
